--- a/AndroidAssignment/app/src/main/res/layout/activity_home.xml
+++ b/AndroidAssignment/app/src/main/res/layout/activity_home.xml
@@ -6,141 +6,220 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/tv_home_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/allerta"
-        android:text="SOPTHub"
-        android:textColor="#F06292"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:id="@+id/tv_home_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/allerta"
-        android:text="이름"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/tv_home_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="나이"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />
-
-    <TextView
-        android:id="@+id/tv_home_age2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="25"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_name2"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_name2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_home_name2" />
-
-    <TextView
-        android:id="@+id/tv_home_mbti"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="MBTI"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_age"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_age"
-        app:layout_constraintTop_toBottomOf="@+id/tv_home_age" />
-
-    <TextView
-        android:id="@+id/tv_home_mbti2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="ESTJ"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:fontFamily="@font/allerta"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_age2"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_age2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_home_age2" />
-
-    <TextView
-        android:id="@+id/tv_home_introduce"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:fontFamily="@font/allerta"
-        android:text="안녕하세요 25살 권용민입니다"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/bt_home_git"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_mbti2"
-        app:layout_constraintHorizontal_bias="0.405"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_mbti" />
-
-    <TextView
-        android:id="@+id/tv_home_name2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="130dp"
-        android:fontFamily="@font/allerta"
-        android:text="권용민"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="-30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="-30dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_title"
-        app:layout_constraintStart_toStartOf="@+id/tv_home_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_home_title"
-        app:srcCompat="@drawable/myface" />
-
-    <ImageButton
-        android:id="@+id/bt_home_git"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/bt_git" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_home_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="서울시 관악구 신림동 거주중"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/allerta"
+                android:textColor="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_std"
+                android:layout_marginTop="20dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_home_std"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="가톨릭대학교 미디어기술콘텐츠학과 17학번"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/allerta"
+                android:textColor="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/bt_home_git" />
+
+            <TextView
+                android:id="@+id/tv_home_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/allerta"
+                android:text="SOPTHub"
+                android:textColor="#F06292"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tv_home_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="130dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/allerta"
+                android:text="이름"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_home_profile" />
+
+            <TextView
+                android:id="@+id/tv_home_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/allerta"
+                android:text="나이"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_name"
+                app:layout_constraintStart_toStartOf="@+id/tv_home_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />
+
+            <TextView
+                android:id="@+id/tv_home_age2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/allerta"
+                android:text="25"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_name2"
+                app:layout_constraintStart_toStartOf="@+id/tv_home_name2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_name2" />
+
+            <TextView
+                android:id="@+id/tv_home_mbti"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/allerta"
+                android:text="MBTI"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_age"
+                app:layout_constraintStart_toStartOf="@+id/tv_home_age"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_age" />
+
+            <TextView
+                android:id="@+id/tv_home_mbti2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/allerta"
+                android:text="ESTJ"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_age2"
+                app:layout_constraintStart_toStartOf="@+id/tv_home_age2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_age2" />
+
+            <TextView
+                android:id="@+id/tv_home_introduce"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/allerta"
+                android:text="안녕하세요 25살 권용민입니다"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_mbti" />
+
+            <TextView
+                android:id="@+id/tv_home_name2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="130dp"
+                android:fontFamily="@font/allerta"
+                android:text="권용민"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_home_profile" />
+
+            <ImageView
+                android:id="@+id/iv_home_profile"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="-30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="-30dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_title"
+                app:layout_constraintStart_toStartOf="@+id/tv_home_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_title"
+                app:srcCompat="@drawable/myface" />
+
+
+            <ImageButton
+                android:id="@+id/bt_home_git"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/bt_git"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_introduce" />
+
+            <TextView
+                android:id="@+id/tv_home_station"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가까운역은 신림역, 서울대입구역"
+                android:textSize="15dp"
+                android:textColor="#000000"
+                android:fontFamily="@font/allerta"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_home_address"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                 />
+
+            <ImageView
+                android:id="@+id/iv_home_profile2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_home_station"
+                app:layout_constraintStart_toStartOf="@id/tv_home_station"
+                app:layout_constraintTop_toBottomOf="@id/tv_home_station"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:srcCompat="@drawable/my_face2"
+                 />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+    /
 
 </androidx.constraintlayout.widget.ConstraintLayout>
