--- a/again/app/src/main/res/layout/activity_loginsetting.xml
+++ b/again/app/src/main/res/layout/activity_loginsetting.xml
@@ -4,27 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.HomeActivity">
-
+    tools:context=".ui.LoginsettingActivity">
 
     <TextView
-        android:id="@+id/tv_top"
+        android:id="@+id/tv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="로그인 성공"
-        app:layout_constraintBottom_toTopOf="@+id/bt_loginsetting"
+        android:layout_marginTop="50dp"
+        android:text="환경설정"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/bt_loginsetting"
+        android:id="@+id/bt_auto_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="150dp"
-        android:text="자동로그인 설정"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="30dp"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_setting" />
 </androidx.constraintlayout.widget.ConstraintLayout>
